Fix typos in cleaned up code for AoC Day 7 post

--- a/content/md/posts/2023-09-22-aoc-2022-day7.md
+++ b/content/md/posts/2023-09-22-aoc-2022-day7.md
@@ -96,7 +96,7 @@ The workhorse of the above code is `parse-command`, and it's intended to be used
 (defn parse [input]
   (->> input
        str/split-lines
-       (reduce parse nil)
+       (reduce parse-command nil)
        z/root))
        
 (parse sample-input)
@@ -213,7 +213,7 @@ There's a `postwalk` function in that namespace that just *figures out* how to t
 
 (-> sample-input
     parse
-    (walk/postwalk total-size))
+    (walk/postwalk assoc-size))
 ```
 
 After parsing the sample input into a filesystem tree, we finish up with a `postwalk` to calculate the directory sizes. As mentioned above, `postwalk` takes a function that transforms a node: `assoc-size`. This function does pretty much what you would expect: if there are children (i.e. this node is a directory), `assoc` in the sum of the sizes of all the children; otherwise, leave the node unchanged, since it already has a size specified.
